Reviewed by Darin Adler.

Fix PluginViewNone.cpp compilation for ports that also compile PluginView.cpp
https://bugs.webkit.org/show_bug.cgi?id=37939


Canonical link: https://commits.webkit.org/52704@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61697 268f45cc-cd09-0410-ab3c-d52691b4dbfc