WebCore/plugins/PluginViewNone.cpp
@@ -120,28 +120,33 @@ void PluginView::restart()
 {
 }
 
-#if ENABLE(NETSCAPE_PLUGIN_API)
-void PluginView::keepAlive(NPP)
-{
-}
-#endif
-
-#if PLATFORM(MAC) || PLATFORM(CHROMIUM) || PLATFORM(EFL)
-void PluginView::privateBrowsingStateChanged(bool)
-{
-}
-
-void PluginView::setJavaScriptPaused(bool)
-{
-}
-#endif
-
 #if defined(XP_UNIX) && ENABLE(NETSCAPE_PLUGIN_API)
 void PluginView::handleFocusInEvent()
 {
 }
 
 void PluginView::handleFocusOutEvent()
+{
+}
+#endif
+
+// The functions below are for platforms that do not use PluginView for plugins
+// due to architectural differences. The plan is to eventually have all
+// ports using PluginView, but until then, if new functions like this are 
+// added, please make sure they have the proper platform #ifs so that changes
+// do not break ports who compile both this file and PluginView.cpp.   
+#if PLATFORM(MAC) || PLATFORM(CHROMIUM) || PLATFORM(EFL)
+#if ENABLE(NETSCAPE_PLUGIN_API)
+void PluginView::keepAlive(NPP)
+{
+}
+#endif
+
+void PluginView::privateBrowsingStateChanged(bool)
+{
+}
+
+void PluginView::setJavaScriptPaused(bool)
 {
 }
 #endif
